--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,8 @@
 @import 'abstracts/variables';
 
 @import 'base/base';
+
+@import 'components/navigation';
+
+@import 'layout/container';
+@import 'layout/header';
