--- a/css/main.css
+++ b/css/main.css
@@ -10,5 +10,105 @@ html {
 
 body {
   font-family: 'Josefin Sans', sans-serif;
-  box-sizing: border-box;
-  font-size: 1.6rem; }
+  box-sizing: border-box; }
+
+.navigation__list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%; }
+
+.navigation__item {
+  list-style: none;
+  position: relative; }
+
+.navigation__link {
+  color: #333;
+  text-decoration: none;
+  font-size: 1.8rem;
+  transition: all 0.3s; }
+  .navigation__link:hover {
+    color: #999999; }
+
+.navigation__dropdown-list {
+  position: absolute;
+  top: 3rem;
+  right: -2.8rem;
+  width: 10rem;
+  list-style: none;
+  background-color: #e6e2e4;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 0.2rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s; }
+  .navigation__dropdown-list::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: -1.5rem;
+    left: 5.2rem;
+    border-right: 15px solid transparent;
+    border-bottom: 15px solid #e6e2e4;
+    border-left: 15px solid transparent; }
+
+.navigation__dropdown-item {
+  margin: 0.5rem 0; }
+
+.navigation__dropdown-link {
+  color: #333;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 1.6rem;
+  transition: all 0.3s; }
+  .navigation__dropdown-link:hover {
+    color: #999999; }
+
+.navigation__item--dropdown::after {
+  font-family: 'Font Awesome 5 Free';
+  content: '\f078';
+  font-weight: bold; }
+
+.navigation__item--dropdown:hover .navigation__dropdown-list {
+  visibility: visible;
+  opacity: 1; }
+
+.navigation--header-top {
+  grid-column: 7 / 10;
+  grid-row: 1 / 2; }
+
+.navigation--header-bottom {
+  grid-column: 3 / 8;
+  grid-row: 3 / 4; }
+
+.container {
+  display: grid;
+  grid-template-columns: minmax(6rem, 1fr) repeat(8, 1fr) minmax(6rem, 1fr);
+  grid-template-rows: repeat(4, min-content);
+  grid-row-gap: 1.6rem;
+  background-color: #f2f0f1; }
+
+.header {
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
+  display: grid;
+  grid-template-columns: minmax(10rem, 1fr) repeat(7, minmax(min-content, 16rem)) minmax(10rem, 1fr);
+  grid-template-rows: repeat(3, min-content);
+  grid-gap: 2rem; }
+  .header__logo {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    padding: 1rem; }
+  .header__logo-img {
+    width: 10rem;
+    height: 100%; }
+  .header__heading {
+    grid-column: 4 / 7;
+    grid-row: 2 / 3;
+    text-align: center; }
+  .header__heading-text {
+    font-family: 'Great Vibes', cursive;
+    font-size: 6rem;
+    font-weight: lighter;
+    letter-spacing: 0.5rem; }
