--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,5 +13,5 @@ html {
 body {
   font-family: 'Josefin Sans', sans-serif;
   box-sizing: border-box;
-  font-size: 1.6rem;
+  // font-size: 1.6rem;
 }
