--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'base/base';
 
 @import 'components/navigation';
+@import 'components/slideshow';
 
 @import 'layout/container';
 @import 'layout/header';
