--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,64 @@ body {
   grid-column: 3 / 8;
   grid-row: 3 / 4; }
 
+.slideshow {
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
+  position: relative;
+  width: 100%;
+  height: 80vh; }
+  .slideshow__slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: inherit;
+    height: inherit;
+    animation: slideshow 20s linear infinite; }
+    .slideshow__slide:nth-child(1) {
+      animation-delay: 0s; }
+    .slideshow__slide:nth-child(2) {
+      animation-delay: 4s; }
+    .slideshow__slide:nth-child(3) {
+      animation-delay: 8s; }
+    .slideshow__slide:nth-child(4) {
+      animation-delay: 12s; }
+    .slideshow__slide:nth-child(5) {
+      animation-delay: 16s; }
+  .slideshow__image {
+    width: inherit;
+    height: inherit;
+    object-fit: cover; }
+  .slideshow__content {
+    background-color: rgba(255, 255, 238, 0.9);
+    position: absolute;
+    bottom: 6rem;
+    left: 6rem;
+    max-width: 40rem;
+    padding: 5rem; }
+  .slideshow__heading {
+    font-size: 4.2rem;
+    color: #333; }
+  .slideshow__text {
+    margin: 1rem 0;
+    font-size: 1.8rem; }
+
+@keyframes slideshow {
+  0% {
+    visibility: hidden;
+    opacity: 0; }
+  2% {
+    visibility: visible;
+    opacity: 1; }
+  18% {
+    visibility: visible;
+    opacity: 1; }
+  20% {
+    visibility: hidden;
+    opacity: 0; }
+  100% {
+    visibility: hidden;
+    opacity: 0; } }
+
 .container {
   display: grid;
   grid-template-columns: minmax(6rem, 1fr) repeat(8, 1fr) minmax(6rem, 1fr);
@@ -95,7 +153,8 @@ body {
   display: grid;
   grid-template-columns: minmax(10rem, 1fr) repeat(7, minmax(min-content, 16rem)) minmax(10rem, 1fr);
   grid-template-rows: repeat(3, min-content);
-  grid-gap: 2rem; }
+  grid-gap: 2rem;
+  z-index: 100; }
   .header__logo {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
