--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,6 +7,7 @@
     minmax(10rem, 1fr);
   grid-template-rows: repeat(3, min-content);
   grid-gap: 2rem;
+  z-index: 100;
 
   &__logo {
     grid-column: 1 / 2;
