--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,8 +3,11 @@
 
 @import 'base/base';
 
+@import 'components/arrow-button';
 @import 'components/navigation';
+@import 'components/product';
 @import 'components/slideshow';
 
 @import 'layout/container';
 @import 'layout/header';
+@import 'layout/products';
